Fix for wallet screen scrolling on small screens (#647)

--- a/styles.css
+++ b/styles.css
@@ -436,7 +436,8 @@ body {
 }
 
 #contactsScreen,
-#chatsScreen {
+#chatsScreen,
+#walletScreen {
   padding-bottom: 80px;
 }
 
